# Blaze

./: .gitattributes  .gitignore  .gitmodules  Blaze.sln  Blaze.vcxproj  Blaze.vcxproj.filters  BlazeEngine.sln  CMakeLists.txt  GenProject.bat  LICENSE  README.md  premake5.lua
.github/workflows/: cmake-single-platform.yml
Blaze/: Blaze.vcxproj  Blaze.vcxproj.filters  MenuBar.cpp  MenuBar.h
Blaze/src/: Blaze.h  bzpch.cpp  bzpch.h  hzpch.h
Blaze/src/Blaze/: Application.cpp  Application.h  Core.h  EntryPoint.h  ErrorHandler.h  Log.cpp  Log.h  Window.cpp  Window.h
Blaze/src/Blaze/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.h  Window.cpp  Window.h  WindowsInput.cpp  WindowsInput.h
Blaze/src/Blaze/Error/: ErrorHandler.h
Blaze/src/Blaze/Event/: ApplicationEvent.h  Event.h  EventCallBack.h  KeyCodes.h  KeyEvent.h  MouseEvent.h
Blaze/src/Blaze/ImGui/: ContentBrowser.cpp  ContentBrowser.h  ImGuiContext.cpp  ViewPort.h  (+6 more)
BlazeEngine/: BlazeEngine.vcxproj  CMakeLists.txt
BlazeEngine/src/: main.cpp
CoreEngine/: CoreEngine.vcxproj  CoreEngine.vcxproj.filters
CoreEngine/Blaze/: CMaLkeLists.txt
CoreEngine/Blaze/src/: Blaze.cpp  Blaze.h
Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini
Sandbox/src/: Application.cpp  SandBoxApp.cpp  glad.c
bin-int/Debug-Win32/${ProjectName}/: Blaze.dll.recipe  Blaze.exe.recipe  Sandbox.dll.recipe  Sandbox.exe.recipe  Sandbox.ilk  vc143.idb
scripts/: Setup.py  build.sh
scripts/Setup/: setup.sh
src/: Blaze.h
src/Blaze/: Application.h  Core.h  EntryPoint.h
(+37 files in other folders)
